Fix: broken links in index.html to point to new pages

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <nav class="navbar">
         <div class="brand">KEVIN SHEPHERD</div>
         <div class="nav-links">
-            <a href="#about" class="nav-link active">ABOUT</a>
-            <a href="#vision" class="nav-link">VISION MINUTES</a>
-            <a href="#speaker" class="nav-link">SPEAKER INQUIRY</a>
-            <a href="#contact" class="nav-link">CONTACT</a>
+            <a href="index.html" class="nav-link active">ABOUT</a>
+            <a href="vision-minutes.html" class="nav-link">VISION MINUTES</a>
+            <a href="speaker-inquiry.html" class="nav-link">SPEAKER INQUIRY</a>
+            <a href="contact.html" class="nav-link">CONTACT</a>
         </div>
         <div class="mobile-menu-btn">
             <div class="bar"></div>
@@ -36,8 +36,7 @@
 
             <div class="hero-content-wrapper">
                 <div class="hero-image-container fade-up">
-                    <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?auto=format&fit=crop&q=80&w=800&ixlib=rb-4.0.3"
-                        alt="Kevin Shepherd Portrait" class="portrait-img">
+                    <img src="images/hero-optimized.jpg" alt="Kevin Shepherd Portrait" class="portrait-img">
                 </div>
 
                 <div class="hero-text-container">
@@ -64,7 +63,7 @@
                     </div>
 
                     <div class="cta-container fade-up delay-2">
-                        <a href="#contact" class="btn-primary"><span>LETS CONNECT</span></a>
+                        <a href="contact.html" class="btn-primary"><span>LETS CONNECT</span></a>
                     </div>
                 </div>
             </div>
