feat: Add testimonials to the speaker inquiry page

--- a/speaker-inquiry.html
+++ b/speaker-inquiry.html
@@ -29,81 +29,96 @@
     </nav>
 
     <main class="page-container speaker-page fade-up">
-        <div class="speaker-content">
-            <h1 class="speaker-heading">Great leaders build great leaders who build great leaders.</h1>
-            <p class="speaker-subheading">Interested in Kevin Shepherd speaking at your event?</p>
+        <div class="speaker-grid">
+            <div class="speaker-content">
+                <h1 class="speaker-heading">Great leaders build great leaders who build great leaders.</h1>
+                <p class="speaker-subheading">Interested in Kevin Shepherd speaking at your event?</p>
 
-            <img src="images/hero-optimized.jpg" alt="Kevin Shepherd Speaking" class="speaker-img">
+                <img src="images/hero-optimized.jpg" alt="Kevin Shepherd Speaking" class="speaker-img">
 
-            <div class="speaker-available">
-                <p>Kevin is available for:</p>
-                <ul>
-                    <li>Keynotes</li>
-                    <li>Breakout sessions</li>
-                    <li>Discussion panels</li>
-                    <li>Podcasts</li>
-                    <li>Television Interviews</li>
-                </ul>
+                <div class="speaker-available">
+                    <p>Kevin is available for:</p>
+                    <ul>
+                        <li>Keynotes</li>
+                        <li>Breakout sessions</li>
+                        <li>Discussion panels</li>
+                        <li>Podcasts</li>
+                        <li>Television Interviews</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="speaker-form-container">
+                <form class="flat-form">
+                    <div class="form-row">
+                        <div class="form-col">
+                            <label for="firstName">FIRST NAME</label>
+                            <input type="text" id="firstName" name="firstName" required>
+                        </div>
+                        <div class="form-col">
+                            <label for="lastName">LAST NAME</label>
+                            <input type="text" id="lastName" name="lastName" required>
+                        </div>
+                    </div>
+
+                    <div class="form-row">
+                        <div class="form-col full-width">
+                            <label for="email">E-MAIL</label>
+                            <input type="email" id="email" name="email" required>
+                        </div>
+                    </div>
+
+                    <div class="form-row">
+                        <div class="form-col full-width">
+                            <label for="org">HOST ORGANIZATION</label>
+                            <input type="text" id="org" name="org">
+                        </div>
+                    </div>
+
+                    <div class="form-row">
+                        <div class="form-col full-width">
+                            <label for="eventType">EVENT TYPE</label>
+                            <input type="text" id="eventType" name="eventType">
+                        </div>
+                    </div>
+
+                    <div class="form-row">
+                        <div class="form-col full-width">
+                            <label for="date">EVENT DATE/ TIME</label>
+                            <input type="text" id="date" name="date">
+                        </div>
+                    </div>
+
+                    <div class="form-row">
+                        <div class="form-col full-width">
+                            <label for="msg">MESSAGE REQUESTED</label>
+                            <input type="text" id="msg" name="msg">
+                        </div>
+                    </div>
+
+                    <div class="form-row">
+                        <div class="form-col full-width">
+                            <label for="info">ADDITIONAL INFORMATION</label>
+                            <input type="text" id="info" name="info">
+                        </div>
+                    </div>
+
+                    <button type="submit" class="btn-flat">SUBMIT</button>
+                </form>
             </div>
         </div>
 
-        <div class="speaker-form-container">
-            <form class="flat-form">
-                <div class="form-row">
-                    <div class="form-col">
-                        <label for="firstName">FIRST NAME</label>
-                        <input type="text" id="firstName" name="firstName" required>
-                    </div>
-                    <div class="form-col">
-                        <label for="lastName">LAST NAME</label>
-                        <input type="text" id="lastName" name="lastName" required>
-                    </div>
-                </div>
-
-                <div class="form-row">
-                    <div class="form-col full-width">
-                        <label for="email">E-MAIL</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                </div>
-
-                <div class="form-row">
-                    <div class="form-col full-width">
-                        <label for="org">HOST ORGANIZATION</label>
-                        <input type="text" id="org" name="org">
-                    </div>
-                </div>
-
-                <div class="form-row">
-                    <div class="form-col full-width">
-                        <label for="eventType">EVENT TYPE</label>
-                        <input type="text" id="eventType" name="eventType">
-                    </div>
-                </div>
-
-                <div class="form-row">
-                    <div class="form-col full-width">
-                        <label for="date">EVENT DATE/ TIME</label>
-                        <input type="text" id="date" name="date">
-                    </div>
-                </div>
-
-                <div class="form-row">
-                    <div class="form-col full-width">
-                        <label for="msg">MESSAGE REQUESTED</label>
-                        <input type="text" id="msg" name="msg">
-                    </div>
-                </div>
-
-                <div class="form-row">
-                    <div class="form-col full-width">
-                        <label for="info">ADDITIONAL INFORMATION</label>
-                        <input type="text" id="info" name="info">
-                    </div>
-                </div>
-
-                <button type="submit" class="btn-flat">SUBMIT</button>
-            </form>
+        <div class="testimonials-container">
+            <div class="testimonial-card">
+                <p>"Kevin's message was both inspiring and immediately useful.<br>Our leaders left with clear language,
+                    shared direction, and<br>tools we continue to use."</p>
+                <p class="testimonial-author">-Senior leadership, X charity</p>
+            </div>
+            <div class="testimonial-card">
+                <p>"Kevin Shepherd brings clarity to complex leadership challenges.<br>His insights stay with you long
+                    after the event, shaping how<br>leaders think, decide, and align."</p>
+                <p class="testimonial-author">-Senior leadership, X charity</p>
+            </div>
         </div>
     </main>
 
