feat: make KEVIN SHEPHERD brand logo a link to home page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <canvas id="particle-canvas"></canvas>
 
     <nav class="navbar">
-        <div class="brand">KEVIN SHEPHERD</div>
+        <a href="index.html" class="brand">KEVIN SHEPHERD</a>
         <div class="nav-links">
             <a href="index.html" class="nav-link active">ABOUT</a>
             <a href="vision-minutes.html" class="nav-link">VISION MINUTES</a>
