--- a/vision-minutes.html
+++ b/vision-minutes.html
@@ -13,7 +13,7 @@
     <canvas id="particle-canvas"></canvas>
 
     <nav class="navbar">
-        <div class="brand">KEVIN SHEPHERD</div>
+        <a href="index.html" class="brand">KEVIN SHEPHERD</a>
         <div class="nav-links">
             <a href="index.html" class="nav-link">ABOUT</a>
             <a href="vision-minutes.html" class="nav-link active">VISION MINUTES</a>
@@ -76,7 +76,8 @@
                 <div class="about-content">
                     <p class="bold-leadin">See God. See others. See the future.</p>
                     <p>Welcome to <em>Vision Minute</em> — weekly reflections designed to anchor your leadership in
-                        <strong>faith, clarity, and purpose</strong>.</p>
+                        <strong>faith, clarity, and purpose</strong>.
+                    </p>
                     <p>Each short message blends practical and spiritual principles to help you see God's hand at work,
                         lead with integrity, and navigate the future with confidence.</p>
                     <p>"In September 2020, I stepped into the role of CEO at Crossroads and YES TV after more than two
