--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <canvas id="particle-canvas"></canvas>
 
     <nav class="navbar">
-        <div class="brand">KEVIN SHEPHERD</div>
+        <a href="index.html" class="brand">KEVIN SHEPHERD</a>
         <div class="nav-links">
             <a href="index.html" class="nav-link">ABOUT</a>
             <a href="vision-minutes.html" class="nav-link">VISION MINUTES</a>
