style: Stack watermark text and switch to serif font

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
     <main>
         <section id="about" class="hero-section">
-            <div class="watermark-text">KEVIN SHEPHERD</div>
+            <div class="watermark-text" style="font-family: 'Georgia', serif; line-height: 0.8; text-align: center;">
+                KEVIN<br>SHEPHERD</div>
 
             <div class="hero-content-wrapper">
                 <div class="hero-image-container fade-up">
