--- a/vision-minutes.html
+++ b/vision-minutes.html
@@ -28,62 +28,64 @@
         </div>
     </nav>
 
-    <main class="page-container">
+    <main class="page-container vision-page fade-up">
         <section class="vision-section">
-            <div class="vision-hero-banner fade-up">
-                <div class="vision-hero-left">
-                    <div class="vision-title-wrapper">
-                        <h2 class="vision-title-main">Vision</h2>
-                        <h2 class="vision-title-script">Minute</h2>
+            <img src="images/vision-hero-new.png" alt="Vision Minute with Kevin Shepherd"
+                class="vision-hero-image fade-up">
+
+            <div class="vision-grid">
+                <div class="vision-about-text delay-1">
+                    <h3 class="vision-heading">About Vision Minute</h3>
+
+                    <div class="about-content">
+                        <p class="bold-leadin">See God. See others. See the future.</p>
+                        <p>Welcome to <em>Vision Minute</em> — weekly reflections designed to anchor your leadership in
+                            <strong>faith, clarity, and purpose</strong>.
+                        </p>
+                        <p>Each short message blends practical and spiritual principles to help you see God's hand at
+                            work,
+                            lead with integrity, and navigate the future with confidence.</p>
+                        <p>"In September 2020, I stepped into the role of CEO at Crossroads and YES TV after more than
+                            two
+                            decades in pastoral ministry. Throughout my journey, I've learned that leadership is less
+                            about
+                            position and more about perspective — about seeing clearly and responding"</p>
                     </div>
-                    <p class="vision-subtitle">with Kevin Shepherd</p>
                 </div>
-                <div class="vision-hero-right">
-                    <img src="images/hero-optimized.jpg" alt="Kevin Shepherd Vision Minute" class="vision-portrait-img">
-                </div>
-            </div>
 
-            <div class="vision-signup-card fade-up delay-1">
-                <h3 class="signup-title">Subscribe for Weekly Leadership Encouragement</h3>
-                <p class="signup-subtext">See God. See Others. See the Future.</p>
+                <div class="vision-form-container delay-2">
+                    <h3 class="vision-heading">Subscribe for Weekly Leadership Encouragement</h3>
+                    <p class="signup-subtext" style="color: var(--text-secondary); margin-bottom: 2rem;">See God. See
+                        Others. See the Future.</p>
 
-                <form class="vision-form">
-                    <div class="form-group">
-                        <label for="email"><span class="required">*</span> Email</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="firstName">First Name</label>
-                        <input type="text" id="firstName" name="firstName">
-                    </div>
-                    <div class="form-group">
-                        <label for="lastName">Last Name</label>
-                        <input type="text" id="lastName" name="lastName">
-                    </div>
+                    <form class="flat-form">
+                        <div class="form-row">
+                            <div class="form-col full-width">
+                                <label for="email">E-MAIL</label>
+                                <input type="email" id="email" name="email" required>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-col">
+                                <label for="firstName">FIRST NAME</label>
+                                <input type="text" id="firstName" name="firstName">
+                            </div>
+                            <div class="form-col">
+                                <label for="lastName">LAST NAME</label>
+                                <input type="text" id="lastName" name="lastName">
+                            </div>
+                        </div>
 
-                    <p class="form-disclaimer">By submitting this form, you are consenting to receive emails from
-                        Crossroads Christian Communications Inc., PO Box 5100, Burlington, ON, Ontario, L7R 4M2, CA,
-                        http://www.crossroads.ca. You can revoke your consent to receive emails at any time by using the
-                        SafeUnsubscribe® link, found at the bottom of every email. Emails are serviced by Constant
-                        Contact. Our Privacy Policy.</p>
+                        <p class="form-disclaimer" style="margin-top: 1rem;">By submitting this form, you are consenting
+                            to receive emails from
+                            Crossroads Christian Communications Inc., PO Box 5100, Burlington, ON, Ontario, L7R 4M2, CA,
+                            http://www.crossroads.ca. You can revoke your consent to receive emails at any time by using
+                            the
+                            SafeUnsubscribe® link, found at the bottom of every email. Emails are serviced by Constant
+                            Contact. Our Privacy Policy.</p>
 
-                    <button type="submit" class="btn-submit">Sign up!</button>
-                </form>
-            </div>
-
-            <div class="vision-about-text fade-up delay-2">
-                <h3 class="about-title">About Vision Minute</h3>
-
-                <div class="about-content">
-                    <p class="bold-leadin">See God. See others. See the future.</p>
-                    <p>Welcome to <em>Vision Minute</em> — weekly reflections designed to anchor your leadership in
-                        <strong>faith, clarity, and purpose</strong>.
-                    </p>
-                    <p>Each short message blends practical and spiritual principles to help you see God's hand at work,
-                        lead with integrity, and navigate the future with confidence.</p>
-                    <p>"In September 2020, I stepped into the role of CEO at Crossroads and YES TV after more than two
-                        decades in pastoral ministry. Throughout my journey, I've learned that leadership is less about
-                        position and more about perspective — about seeing clearly and responding"</p>
+                        <button type="submit" class="btn-flat">SIGN UP</button>
+                    </form>
                 </div>
             </div>
         </section>
