style: crop speaker image to 1:1 aspect ratio

--- a/speaker-inquiry.html
+++ b/speaker-inquiry.html
@@ -34,7 +34,7 @@
                 <h1 class="speaker-heading">Great leaders build great leaders who build great leaders.</h1>
                 <p class="speaker-subheading">Interested in Kevin Shepherd speaking at your event?</p>
 
-                <img src="images/hero-optimized.jpg" alt="Kevin Shepherd Speaking" class="speaker-img">
+                <img src="images/speaker-hero-new.jpg" alt="Kevin Shepherd Speaking" class="speaker-img">
 
                 <div class="speaker-available">
                     <p>Kevin is available for:</p>
