--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="contact-form-container">
-            <form class="flat-form">
+            <form class="flat-form" action="https://formsubmit.co/bsoppitt@crossroads.ca" method="POST">
                 <div class="form-row">
                     <div class="form-col">
                         <label for="firstName">FIRST NAME</label>
