--- a/speaker-inquiry.html
+++ b/speaker-inquiry.html
@@ -49,7 +49,7 @@
             </div>
 
             <div class="speaker-form-container">
-                <form class="flat-form">
+                <form class="flat-form" action="https://formsubmit.co/bsoppitt@crossroads.ca" method="POST">
                     <div class="form-row">
                         <div class="form-col">
                             <label for="firstName">FIRST NAME</label>
